# Enjon

./: .gitignore  BuildAndRun.bat  BuildAndRun_VS2015.bat  BuildAndRun_VS2019.bat  CMakeLists.txt  LICENSE.txt  README.md  temp.txt
Assets/Cache/: AxisBoxMat.easset  AxisBoxMat.emat  AxisBoxMat1.emat  AxisBoxMat2.emat  AxisBoxMat3.emat  BlueMaterial.easset  BlueMaterial.emat  BlueMaterial1.emat  BlueMaterial2.emat  BlueMaterial3.emat  GreenMaterial.easset  GreenMaterial.emat  GreenMaterial1.emat  GreenMaterial2.emat  GreenMaterial3.emat  RedMaterial.easset  RedMaterial.emat  RedMaterial1.emat  RedMaterial2.emat  RedMaterial3.emat  YellowMaterial.easset  YellowMaterial.emat  YellowMaterial1.emat  YellowMaterial2.emat  YellowMaterial3.emat  axisbox.easset  black.easset  blue.easset  defaultstaticgeom.easset  fonts.roboto.roboto-mediumitalic.efnt  fonts.weblysleek.weblysleekuisb.efnt  green.easset  grey.easset  models.axisbox.easset  models.axisbox.emsh  models.unit_cone.easset  models.unit_cone.emsh  models.unit_cube.easset  models.unit_cube.emsh  models.unit_cylinder.easset  (+30 more)
Assets/Shaders/: DebugLine.f.glsl  DebugLine.v.glsl  DefaultShaderGraph..Fragment.glsl  DefaultShaderGraph..Vertex.glsl  DefaultShaderGraph.Deferred_Skinned_Geom.Fragment.glsl  DefaultShaderGraph.Deferred_Skinned_Geom.Vertex.glsl  DefaultShaderGraph.Deferred_StaticGeom.Fragment.glsl  DefaultShaderGraph.Deferred_StaticGeom.Vertex.glsl  DefaultShaderGraph.Forward_StaticGeom.Fragment.glsl  DefaultShaderGraph.InstancedGeom.Fragment.glsl  DefaultShaderGraph.InstancedGeom.Vertex.glsl  DefaultShaderGraph.StaticGeom.Fragment.glsl  DefaultStaticGeom.Deferred_InstancedGeom.Fragment.glsl  DefaultStaticGeom.Deferred_InstancedGeom.Vertex.glsl  DefaultStaticGeom.Deferred_Skinned_Geom.Fragment.glsl  DefaultStaticGeom.Deferred_Skinned_Geom.Vertex.glsl  DefaultStaticGeom.Deferred_StaticGeom.Fragment.glsl  DefaultStaticGeom.Forward_StaticGeom.Fragment.glsl  DefaultStaticGeom.InstancedGeom.Fragment.glsl  (+27 more)
Editor/: CMakeLists.txt  editor_resource.rc
Editor/Assets/Models/: backdrop.mtl  dragon.mtl  quad_face.mtl  rock.mtl  unit_cylinder.mtl  unit_shaderball.mtl  unit_sphere.mtl
Editor/Assets/ProjectTemplates/: Build.bat  BuildAndRun.bat  BuildAndRunCompile.bat  CompileProject.bat  CompileProjectOG.bat  ComponentSourceTemplate.cpp  DelPDB.bat  ProjectAppMain.cpp  ProjectCMakeTemplate.txt  ProjectCMakeTemplateOG.txt  ProjectCompileCMakeTemplate.txt  ProjectEnjonDefines.h  ProjectSourceTemplate.cpp
Editor/Assets/Shaders/: DefaultShaderGraph.Forward_StaticGeom.Fragment.glsl  DefaultShaderGraph.InstancedGeom.Fragment.glsl  DefaultStaticGeom.Forward_StaticGeom.Fragment.glsl  DefaultStaticGeom.InstancedGeom.Fragment.glsl
Editor/Assets/Shaders/ShaderGraphs/: StaticGeomAlphaClip.sg  UVTiledShaderGraph.sg
Editor/Assets/ToolChains/: VS2015_MSBuild.tc  VS2017_MSBuild.tc  VS2019_MSBuild.tc
Editor/Include/: EditorApp.h  EditorArchetypeEditWindow.h  EditorAssetBrowserView.h  EditorDocumentationView.h  EditorInspectorView.h  EditorLauncherWindow.h  EditorMaterialEditWindow.h  EditorObject.h  EditorRotationWidget.h  EditorScaleWidget.h  EditorSceneView.h  EditorTransformWidget.h  EditorTransformWidget.h~RF2ba25fe0.TMP  EditorTranslationWidget.h  EditorUIEditWindow.h  EditorView.h  EditorWidget.h  EditorWorldOutlinerView.h  Project.h
Editor/Proc/: Sandbox.bat  WriteResourceFileMain.cpp  build.bat  editor_resource.rc  shell.bat
Editor/Source/: EditorApp.cpp  EditorArchetypeEditWindow.cpp  EditorAssetBrowserView.cpp  EditorDocumentationView.cpp  EditorInspectorView.cpp  EditorLauncherWindow.cpp  EditorMain.cpp  EditorMaterialEditWindow.cpp  EditorRotationWidget.cpp  EditorScaleWidget.cpp  EditorSceneView.cpp  EditorTransformWidget.cpp  EditorTranslationWidget.cpp  EditorUIEditWindow.cpp  EditorView.cpp  EditorWidget.cpp  EditorWorldOutlinerView.cpp  Project.cpp
Generator/: CMakeLists.txt  cmake_install.cmake  config.cfg  generate.bat
Generator/Editor/: Makefile  cmake_install.cmake
Generator/Generator/: Makefile  cmake_install.cmake
Generator/Include/: Introspection.h  Lexer.h  Token.h  Utils.h
Generator/Source/: Generator.cpp  Introspection.cpp  Lexer.cpp  Token.cpp
Generator/Templates/: ECS_InstanceDataTemplate.tmpl  ECS_InstanceDataTemplate_OG.tmpl  UtilTemplate.tmpl
IsoARPG/: IsoARPGProject.sublime-project  IsoARPGProject.sublime-workspace  SCRUM.txt  VSQ.txt
Sandbox/: CMakeLists.txt
Source/: Application.cpp  Console.cpp  Engine.cpp  SubsystemCatalog.cpp  TypeCatalog.cpp
TestProject/: CMakeLists.txt
TestSuite/: CMakeLists.txt
generator/: Generator.cpp
include/: Application.h  CVarsSystem.h  CVarsSystem.hpp  Console.h  Defines.h  Engine.h  Enjon.h  Game.h  Generated.h  Subsystem.h  SubsystemCatalog.h  TestComponent.h  TypeCatalog.h
proc/: MakeFile  all.bat  bd.bat  build.bat  clean.bat  debug.bat  dev.bat  dump.txt  dump.txtcls  gen.bat  gitadd.bat  rel.bat  rr.bat  run.bat  shell.bat  vc120.idb
shaders/: atlas.f.glsl  atlas.v.glsl  basic.f.glsl  button.f.glsl  button.v.glsl  buttonNT.f.glsl  default.f.glsl  default.v.glsl  defaultLight.f.glsl  defaultLight.v.glsl  deferred.f.glsl  depth.f.glsl  depth.v.glsl  equiToCubemap.f.glsl  equiToCubemap.v.glsl  framebuffers.f.glsl  framebuffers.v.glsl  horizontal_blur.f.glsl  horizontal_blur.v.glsl  learn.f.glsl  learn.v.glsl  lighting_basic.f.glsl  lighting_basic.v.glsl  main_shader.vert  no_camera.f.glsl  no_camera.v.glsl  normal.f.glsl  screenshader.f.glsl  screenshader.v.glsl  skybox.f.glsl  skybox.v.glsl  text.f.glsl  text.v.glsl  vertical_blur.f.glsl  vertical_blur.v.glsl
src/: AABB.cpp  BehaviorTree.cpp  CVarsSystem.cpp  Camera2D.cpp  Console.cpp  DeferredRenderer.cpp  Engine.cpp  Enjon.cpp  Font.cpp  FontManager.cpp  FrameBufferObject.cpp  GLSLProgram.cpp  GUIAnimationElement.cpp  Game.cpp  Generated.cpp  ImageLoader.cpp  InputManager.cpp  ParticleEngine2D.cpp  ReadMe.txt  ShaderManager.cpp  Sprite.cpp  SpriteBatch.cpp  SpriteSheetManager.cpp  SubsystemCatalog.cpp  TestComponent.cpp  TextureCache.cpp  Timing.cpp  TypeCatalog.cpp  Window.cpp  picoPNG.cpp
(+666 files in other folders)
